--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
+    "sass": "^1.92.1",
+    "scss": "^0.2.4",
     "zod": "^4.0.5"
   },
   "devDependencies": {
